force-app/main/default/objects/Tag_Link__c/Tag_Link__c.object-meta.xml
<CustomObject>
    <description>A way of relating tags to different data</description>
    <label>Tag Link</label>
    <nameField>
        <displayFormat>TLID-{000000000}</displayFormat>
        <label>Tag Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>