force-app/main/default/objects/Tag_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link a tag to an account using this field</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tag Links</relationshipLabel>
    <relationshipName>Tag_Links</relationshipName>
    <type>Lookup</type>
</CustomField>