force-app/main/default/objects/Tag_Link__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Tag Links</relationshipLabel>
    <relationshipName>Tag_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>