force-app/main/default/objects/Tag_Link__c/fields/TagName__c.field-meta.xml
<CustomField>
    <fullName>TagName__c</fullName>
    <formula>Tag__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TagName</label>
    <type>Text</type>
</CustomField>